<resources>
    <string name="app_name">Sign Language Translator</string>
    <string name="mic_button_description">Microphone button to start speech recognition</string>
    <string name="clear_button_description">Clear text button</string>
    <string name="listening_status">Listening!</string>
    <string name="playing_video">Playing video…</string>
    <string name="translate_button">Translate</string>
</resources>